Migrate code to java 17 (#1087)
* Applied rewrite java 17 migration

$ mvn clean -U org.openrewrite.maven:rewrite-maven-plugin:run -Drewrite.recipeArtifactCoordinates=org.openrewrite.recipe:rewrite-migrate-java:RELEASE -Drewrite.activeRecipes=org.openrewrite.java.migrate.UpgradeToJava17 -Drewrite.exportDatatables=true

Signed-off-by: Marvin Froeder <marvin@datasqrl.com>

* Extra java 17 code clean up

Signed-off-by: Marvin Froeder <marvin@datasqrl.com>

* Use java 17 on docker images

Signed-off-by: Marvin Froeder <marvin@datasqrl.com>

* Use java 17 on github actions

Signed-off-by: Marvin Froeder <marvin@datasqrl.com>

---------

Signed-off-by: Marvin Froeder <marvin@datasqrl.com>