@@ -3,6 +3,16 @@
  */
 package com.datasqrl.schema;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+
+import java.io.IOException;
+import java.util.Map;
+
+import org.apache.commons.lang3.tuple.Pair;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.TestInfo;
+
 import com.datasqrl.io.schema.flexible.type.basic.BasicType;
 import com.datasqrl.io.schema.flexible.type.basic.BasicTypeManager;
 import com.datasqrl.io.schema.flexible.type.basic.BigIntType;
@@ -11,15 +21,6 @@ import com.datasqrl.io.schema.flexible.type.basic.IntervalType;
 import com.datasqrl.io.schema.flexible.type.basic.StringType;
 import com.datasqrl.io.schema.flexible.type.basic.TimestampType;
 import com.datasqrl.util.SnapshotTest;
-import org.apache.commons.lang3.tuple.Pair;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.TestInfo;
-
-import java.io.IOException;
-import java.util.Map;
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class TypeTest {
 
@@ -33,10 +34,10 @@ public class TypeTest {
   @Test
   public void printCombinationMatrix() {
     for (Map.Entry<Pair<BasicType, BasicType>, Pair<BasicType, Integer>> entry : BasicTypeManager.TYPE_COMBINATION_MATRIX.entrySet()) {
-      Pair<BasicType, BasicType> types = entry.getKey();
-      Pair<BasicType, Integer> result = entry.getValue();
-      snapshot.addContent(String.format("%s [%d]", result.getKey(), result.getValue()),
-          String.format("%s + %s", types.getKey(), types.getValue()));
+      var types = entry.getKey();
+      var result = entry.getValue();
+      snapshot.addContent("%s [%d]".formatted(result.getKey(), result.getValue()),
+          "%s + %s".formatted(types.getKey(), types.getValue()));
     }
     snapshot.createOrValidate();
   }
