@@ -4,7 +4,7 @@ public class AuthUtils {
 
   public static final int CALLBACK_SERVER_PORT = 18980;
   public static final String CALLBACK_ENDPOINT = "/api/auth/callback";
-  public static final String REDIRECT_URI = String.format("http://localhost:%d%s", CALLBACK_SERVER_PORT, CALLBACK_ENDPOINT);
+  public static final String REDIRECT_URI = "http://localhost:%d%s".formatted(CALLBACK_SERVER_PORT, CALLBACK_ENDPOINT);
   public static final String REPO_URL = "https://dev.datasqrl.com";
   public static final String CLIENT_ID = "xo8oioFfs3c8nScNi9DF7zlDl4EXu2f9";
   public static final String AUDIENCE = "https://dev.datasqrl.com";
